--- a/index.html
+++ b/index.html
@@ -2,24 +2,126 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Jumpstart</title>
+    <title>BETA: Jumpstart</title>
     <link rel="icon" type="image/png" href="resources/favicon.png">
-    <link rel="stylesheet" href="resources/css/styler.css">
+    <!-- NOTE: stylesheets -->
+    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- NOTE: javascript: Codecademy instructions say to list in head, not at the end as other inst say, so I'm leaving it here for now -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.js"
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
-    <script type="text/javascript" src="resources/js/main.js">
-
-    </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="resources/js/main.js"></script>
   </head>
   <body>
 
+  <!-- NOTE: Header -->
+    <header>
+      <nav class= "navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Explore</a></li>
+            <li><a href="#">Start a project</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+          <img src="resources/images/logo.png" alt="Logo" class="navbar-brand navbar-right collapse navbar-collapse">
+        </div>
+      </nav>
+    </header>
+    <main>
+      <!-- NOTE: Jumbotron -->
+      <div class="jumbotron-fluid jumbotron-bike">
+        <div class="container-fluid">
+          <h1>Get Going.</h1>
+          <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+          <span class="btn btn-primary btn-lg">Jump in</span>
+        </div>
+      </div>
+
+      <!-- NOTE: Featured Project -->
+      <div id="featured" class="container">
+        <h2>Featured project</h2>
+        <div class="row">
+          <div class="col-lg-6 col-xs-12">
+            <div class="image-container">
+              <img src="resources/images/featured-project.png" alt="Small Red House">
+            </div>
+          </div>
+          <div class="col-lg-3 col-xs-6">
+            <h3>DeFrost: A Documentary</h3>
+            <p>by Leo De Firenze</p>
+            <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley.
+              This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing, her family,
+              friends, pets, and eventual depature from a freezing valley in Northern Italy through beautiful cinematography and narration.</p>
+          </div>
+          <div class="col-lg-3 col-xs-6">
+            <h3 id ="categories">Project Categories</h3>
+            <ul>
+              <li>Art</li>
+              <li>Books</li>
+              <li>Crystals</li>
+              <li>Design</li>
+              <li>Doodlybobs</li>
+              <li>Farming</li>
+              <li>Gadgets</li>
+              <li>Hoverboards</li>
+              <li>Jams, Jellies, Etc.</li>
+              <li>Magazines</li>
+              <li>Plants</li>
+              <li>Snakes & Snake Equipment</li>
+              <li>Tables</li>
+              <li>Ventriliquist Figures</li>
+              <li>Yoyos</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- NOTE: Projects -->
+      <div id="projects" class="container">
+        <h2>Projects</h2>
+        <div class="row">
+          <div class="col-lg-4 col-xs-12">
+            <div class="image-container">
+              <img src="resources/images/project1.png" alt="Woman wearing a Hendrix T-shirt and tights">
+            </div>
+            <h3>The Right Tights</h3>
+            <p>by Riley Mae</p>
+            <p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
+          </div>
+          <div class="col-lg-4 col-xs-12">
+            <div class="image-container">
+              <img src="resources/images/project2.png" alt="Room with stylish furnishings">
+            </div>
+            <h3>Peppermint Smart Home</h3>
+            <p>by Brian McDonald</p>
+            <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
+          </div>
+          <div class="col-lg-4 col-xs-12">
+            <div class="image-container">
+              <img src="resources/images/project3.png" alt="Neon Sign in Window">
+            </div>
+            <h3>American Streetlife</h3>
+            <p>by Patrick Wallace</p>
+            <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- NOTE: Learn more section -->
+      <div id="learn-more" class="container-fluid">
+        <strong>Having trouble thinking of an idea?</strong>
+        <p>Inventor's block strikes at the worst time. But that's all changed with the Jumpstart's Good Idea Generator Lite (GIGLi).</p>
+        <a href="#" class="btn btn-primary btn-lg">Learn more</a>
+      </div>
+
+    </main>
   </body>
 </html>
