Navbar javascript added

--- a/index.html
+++ b/index.html
@@ -36,30 +36,33 @@
           <div class="container-fluid">
             <h1>GET GOING.</h1>
             <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
-            <a href="#" class="btn btn-primary btn-lg">Jump in</a>
+            
           </div>
         </div>
         <div class="jumbotron-fluid jumbotron-beer">
           <div class="container-fluid">
             <h1>GET THINKING.</h1>
             <p>Meet like-minded individuals who will help fuel your creative juices.</p>
-            <a href="#" class="btn btn-primary btn-lg">Jump in</a>
+
           </div>
         </div>
         <div class="jumbotron-fluid jumbotron-flowers">
           <div class="container-fluid">
             <h1>GET CREATING.</h1>
             <p>Stop overthinking projects and begin putting them out into the world.</p>
-            <a href="#" class="btn btn-primary btn-lg">Jump in</a>
+
           </div>
         </div>
         <div class="jumbotron-fluid jumbotron-duffel">
           <div class="container-fluid">
             <h1>GET STARTED.</h1>
             <p>What are you waiting for? Today's the day for your next big idea.</p>
-            <a href="#" class="btn btn-primary btn-lg">Jump in</a>
+
           </div>
         </div>
+      </div>
+      <div class="relative-wrapper">
+        <a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
       </div>
 
       <!-- NOTE: Featured Project -->
