--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BETA: Jumpstart</title>
+    <title>Jumpstart</title>
     <link rel="icon" type="image/png" href="resources/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
     <!-- NOTE: stylesheets -->
@@ -36,7 +36,7 @@
           <div class="container-fluid">
             <h1>GET GOING.</h1>
             <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
-            
+
           </div>
         </div>
         <div class="jumbotron-fluid jumbotron-beer">
